Refactor JDBC tests; add Postgres volume
Add a named Docker volume (postgres-data) to docker-compose to persist Postgres data; change H2 dependency scope to test in pom.xml so H2 is used only for tests; remove a debug echo from scripts/cleanup.bat. Heavily refactor ReviewPersistenceTest: enable the 'test' profile, add display names, translate and standardize comments and assertion messages to English, consolidate imports, and make various test cleanup/assertion/SQL tweaks to improve clarity and isolation (sequence resets, clearer failure messages, and minor query/assertion adjustments).